hphp/hack/test/typecheck/script_header_hh.php
<?hh

function script_header_hh_test(): int {
  return "not an int";
}
